# services_management_bot

./: .flutter-plugins-dependencies  Procfile  README.md  pubspec.yaml  requirements.txt
attendance_bot/: .gitignore  README.md  h origin main  pyproject.toml  railpack.json  requirements.txt
attendance_bot/app/: __init__.py  main.py
attendance_bot/app/core/: __init__.py  config.py  localization.py
attendance_bot/app/db/: base.py  session.py
attendance_bot/app/services/: __init__.py  auth_service.py  localization_service.py  super_admin_service.py
attendance_bot/attendance_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
telegram_bot/: .env.example  .gitignore  README.md  main.py  pyproject.toml  tmp_request_assert.db  tmp_request_assert_debug.db  tmp_request_assert_ok.db  tmp_request_debug.db  tmp_request_test.db
telegram_bot/app/: main.py
telegram_bot/app/bot/: routers.py
telegram_bot/app/core/: config.py
telegram_bot/app/db/: session.py
telegram_bot/app/services/: __init__.py  auth_service.py  localization_service.py  super_admin_service.py
telegram_bot/bot/handlers/: __init__.py  admin.py  admin_requests.py  company.py  dispatcher_call.py  help.py  manager.py  request.py  request_admin.py  request_chat.py  settings.py  start.py  worker.py  workers_admin.py
telegram_bot/core/: config.py
telegram_bot/db/: __init__.py  base.py  session.py
telegram_bot/services/: __init__.py  chat_service.py  company_service.py  help_service.py  i18n.py  request_service.py  translation_service.py  user_service.py  users.py
(+65 files in other folders)
