[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attendance-bot"
version = "0.1.0"
description = "Phase 1 foundation for a production-ready Telegram attendance bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0,<4.0.0",
    "SQLAlchemy>=2.0.38,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "alembic>=1.15.0,<2.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.8.0,<3.0.0",
]

[project.scripts]
attendance-bot = "app.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
