[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-bot-template"
version = "0.1.0"
description = "Clean Telegram bot starter with aiogram 3, SQLAlchemy async, and SQLite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0,<4.0.0",
    "SQLAlchemy>=2.0.38,<3.0.0",
    "aiosqlite>=0.21.0,<1.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*", "core*", "db*", "services*"]
